<resources>
    <string name="app_name">MaterialLoginPage</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="welcome">Welcome</string>
    <string name="top_icon1">top_icon</string>
    <string name="name">Bùi Nguyễn Ngọc Huy - 1811505310114</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="confirmpassword">confirmpassword</string>
    <string name="phone_number">phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="signuphere">Already have an account ? sign in here</string>
</resources>
